<?xml version="1.0" encoding="UTF-8" ?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.solace.spring.cloud</groupId>
        <artifactId>solace-spring-cloud-build</artifactId>
        <version>3.1.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>solace-spring-cloud-parent</artifactId>
    <packaging>pom</packaging>

    <name>Solace Spring Cloud Parent</name>
    <description>Parent package for Solace Spring Cloud</description>
    <url>https://github.com/${repoName}/solace-spring-cloud/tree/${project.scm.tag}/solace-spring-cloud-parent</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.source>17</maven.compiler.source>

        <solace.jcsmp.version>10.21.0</solace.jcsmp.version>
        <solace.jms.version>10.21.0</solace.jms.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!--
			Workaround for CVE-2021-45046
			Remove after upgrading to Spring Boot >= 2.6.2
			 -->
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-bom</artifactId>
                <version>2.20.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <!-- Import Solace Spring Boot dependency management -->
                <groupId>com.solace.spring.boot</groupId>
                <artifactId>solace-spring-boot-bom</artifactId>
                <version>${solace.spring.boot.bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <!-- Import Spring Cloud dependency management -->
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring.cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <!-- Import Spring Cloud dependency management -->
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!--
            Workaround for spring-cloud-dependencies (spring-cloud-gcp-dependencies in particular) overriding this.
            Since we use the flatten plugin, this workaround is only applicable to the tests within this repo
            and does not affect the production build in the end.
            -->
            <dependency>
                <groupId>io.pivotal.cfenv</groupId>
                <artifactId>java-cfenv</artifactId>
                <version>${pivotal.cfenv.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.22.2</version>
                    <configuration>
                        <argLine>
                            --add-opens java.base/java.lang=ALL-UNNAMED
                            --add-opens java.base/java.util=ALL-UNNAMED
                            --add-opens java.base/java.net=ALL-UNNAMED
                        </argLine>
                        <properties>
                            <configurationParameters>
                                junit.jupiter.execution.parallel.enabled=false
                            </configurationParameters>
                        </properties>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>2.22.2</version>
                    <executions>
                        <execution>
                            <id>integration-test</id>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                            <configuration>
                                <argLine>
                                    --add-opens java.base/java.lang=ALL-UNNAMED
                                    --add-opens java.base/java.util=ALL-UNNAMED
                                    --add-opens java.base/java.net=ALL-UNNAMED
                                </argLine>
                                <properties>
                                    <configurationParameters>
                                        junit.jupiter.execution.parallel.enabled=false
                                    </configurationParameters>
                                </properties>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>